test/indexOutOfBounds9.slq
// args: --run

def main(){
	x:=[1,2,3];
	return x[3]; // error
}
